# voice-to-command

./: .env.example  .gitignore  README.md  chrome_procs.txt  failed_testcases.md  git_diff.patch  implementation_plan.md  log_tail.txt  test_cursor.html  test_dom_agent.py  test_fallback.py  testcondition.md
.github/workflows/: pytest.yml
backend/: ace-backend.spec  app_cache.json  browser_testcondition.md  bundle_tesseract.py  download_tesseract.py  download_tesseract_zip.py  dump_dom.py  file_cache.db-journal  fix_db.py  inspect_page.py  launch_and_test.py  list_tables.py  log_all_events.py  log_target_events.py  migrate_db.py  migrate_global_shortcuts.py  migrate_reply_sound.py  migrate_scan_mode.py  mock_crm.html  out.txt  out_full.txt  out_full_app.txt  out_match.txt  pytest.ini  requirements-automation.in  requirements-build.txt  requirements-dev.in  requirements-dev.txt  requirements-voice.in  requirements.in  requirements.txt  run.py  scratch.py  scratch2.py  scratch3.py  scratch4.py  scratch5.py  scratch7.py  scratch_dump.py  scratch_logs.txt  (+62 more)
backend/app/: config.py  database.py  main.py
backend/scratch/: apply_all_changes.py  (+57 more)
database/: migrate_global_website_shortcuts.sql  supabase_schema.sql
frontend/: find_style.py  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.prod.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/permissions/: allow-app-commands.toml
frontend/src-tauri/src/: main.rs
scratch/: inspect_login.py  test_fill.py
scripts/: download_models.py  setup.py
services/: background_service.py
voice/: pipeline.py
(+419 files in other folders)
