[package]
name = "ace-voice-controller"
version = "1.0.0"
description = "ACE AI-powered desktop voice control and automation system"
authors = ["ACE Team"]
license = ""
repository = ""
default-run = "ace-voice-controller"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0", features = ["tray-icon", "devtools"] }
tauri-plugin-autostart = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-shell = "2.0.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
